Organize head tag / Add static contents

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="icon" href="./favicon.ico" />
+    <title>ニシワキ ロゴメーカー</title>
+    <meta name="description" content="西脇市のロゴを使って、あなただけのアイコン画像を作成します。" />
+    <meta property="og:title" content="ニシワキ ロゴメーカー" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://nishiwaki-logo-maker.jnito.com/" />
+    <meta property="og:image" content="https://nishiwaki-logo-maker.jnito.com/ogp.png" />
+    <meta property="og:description" content="西脇市のロゴを使って、あなただけのアイコン画像を作成します。" />
+    <meta name="twitter:image:src" content="https://nishiwaki-logo-maker.jnito.com/ogp.png" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="ニシワキ ロゴメーカー" />
+    <meta name="twitter:description" content="西脇市のロゴを使って、あなただけのアイコン画像を作成します。" />
+    <link rel="shortcut icon" type="image/png" href="/favicon/favicon-32x32.png" />
+    <link rel="apple-touch-icon" sizes="57x57" href="/favicon/apple-icon-57x57.png" />
+    <link rel="apple-touch-icon" sizes="60x60" href="/favicon/apple-icon-60x60.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="/favicon/apple-icon-72x72.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="/favicon/apple-icon-76x76.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="/favicon/apple-icon-114x114.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="/favicon/apple-icon-120x120.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="/favicon/apple-icon-144x144.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="/favicon/apple-icon-152x152.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-icon-180x180.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/favicon/android-icon-192x192.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon/favicon-96x96.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" />
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=default,es6,es7"></script>
   </head>
