--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,11 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="ニシワキ ロゴメーカー" />
     <meta name="twitter:description" content="西脇市のロゴを使って、あなただけのアイコン画像を作成します。" />
-    <link rel="shortcut icon" type="image/png" href="/favicon/favicon-32x32.png" />
+
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="msapplication-TileImage" content="/favicon/ms-icon-144x144.png" />
+    <meta name="theme-color" content="#ffffff" />
+    <link rel="manifest" href="/favicon/manifest.json" />
     <link rel="apple-touch-icon" sizes="57x57" href="/favicon/apple-icon-57x57.png" />
     <link rel="apple-touch-icon" sizes="60x60" href="/favicon/apple-icon-60x60.png" />
     <link rel="apple-touch-icon" sizes="72x72" href="/favicon/apple-icon-72x72.png" />
@@ -28,6 +32,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="96x96" href="/favicon/favicon-96x96.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png" />
+
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" />
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=default,es6,es7"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-46693484-4"></script>
