--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,13 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" />
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=default,es6,es7"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-46693484-4"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-46693484-4');
+    </script>
   </head>
   <body>
     <div id="root"></div>
